fix:footer overlapping over content

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,3 @@
   position: relative;
   min-height: 100vh;
 }
-
-.content-container {
-  padding-bottom: 10rem;
-}
